# cmake-samples

flavors/part1_step1/: CMakeLists.txt  Todo.cpp  Todo.h  main.cpp  test.cpp
flavors/part1_step2/: CMakeLists.txt  main.cpp  test.cpp
flavors/part1_step2/TodoCore/: CMakeLists.txt  Todo.cpp
